@@ -14,9 +14,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
 }
-compileJava {
-    options.compilerArgs += ['--enable-preview']
-}
+compileOptions {
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
 
 test {
     useJUnitPlatform()
